# Snippets

./: README.md
C++/Side_by_side_videos/: README.md  (+1 more)
Python/: LICENSE
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/: CMakeLists.txt
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/include/custom/ompl_interface/: model_based_planning_context.h  ompl_interface.h  planning_context_manager.h
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/include/custom/ompl_interface/detail/: constrained_goal_sampler.h  constrained_sampler.h  constrained_valid_state_sampler.h  constraint_approximations.h  constraints_library.h  goal_union.h  ompl_constraints.h  projection_evaluators.h  state_validity_checker.h  threadsafe_state_storage.h
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/include/custom/ompl_interface/parameterization/: model_based_state_space.h  model_based_state_space_factory.h
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/include/custom/ompl_interface/parameterization/joint_space/: constrained_planning_state_space.h  constrained_planning_state_space_factory.h  joint_model_state_space.h  joint_model_state_space_factory.h
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/src/: model_based_planning_context.cpp  ompl_interface.cpp  ompl_planner_manager.cpp  planning_context_manager.cpp
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/src/detail/: constrained_goal_sampler.cpp  constrained_sampler.cpp  constrained_valid_state_sampler.cpp  constraints_library.cpp  goal_union.cpp  ompl_constraints.cpp  projection_evaluators.cpp  state_validity_checker.cpp  threadsafe_state_storage.cpp
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/src/parameterization/: model_based_state_space.cpp  model_based_state_space_factory.cpp
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/src/parameterization/joint_space/: constrained_planning_state_space.cpp  constrained_planning_state_space_factory.cpp  joint_model_state_space.cpp  joint_model_state_space_factory.cpp
ROS2/MoveIt2/custom_moveit_planners/ompl/ompl_interface/src/parameterization/work_space/: pose_model_state_space.cpp  pose_model_state_space_factory.cpp
Scripts/: cvt2mp4.sh  cvt2wmv.sh  md5sum_dir.sh
(+25 files in other folders)
